write a little bit about the proof of lubin and tate’s theorem

--- a/quillen.tex
+++ b/quillen.tex
@@ -38,7 +38,7 @@ In the case $S = \Spec k$ for a field $k$, ``Artinian'' means that $\sheaf{O}_{X
 \end{remark}
 
 These ind-systems arise when studying completions of rings.  To address the geometric situation, we first owe ourselves a definition of a closed subscheme, which we've somehow avoided up until this point:
-\begin{definition}
+\begin{definition}\label{DefnCompletion}
 Let $X$ be an affine formal scheme, and pick a chart $\Spec R \to X$.  A subscheme $Y \subseteq X$ is called \textit{closed} when it has the form
 \begin{center}
 \begin{tikzcd}
