copied down ideas from scratch paper

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -371,6 +371,16 @@ Goerss also talks about ``Hopf ring hom'', and how, since many of the Hopf rings
 
 
 
+\section{Brown--Gitler spectra}
+
+Goerss's construction of Brown--Gitler spectra using unstable cooperations
+
+
+
+
+
+
+
 \subsection*{Things that belong in this chapter}
 
 Theorem 6.1 of R--W \textit{The Hopf ring for complex bordism} sounds like something related to Quillen's elementary proof.
