--- a/sigma.tex
+++ b/sigma.tex
@@ -21,6 +21,9 @@ The phrasing of $MUP$ and $MU$ orientations in terms of $C^0$ and $C^1$--structu
 I'm not sure what story I mean to tell on this day.  I want to get some low-order version of the story out of the way, to use as a template for the topological side of things.
 
 
+
+
+
 \section{Elliptic curves and $\theta$--functions}
 
 -------
@@ -441,7 +444,7 @@ M\Spin \arrow{rd} \arrow{r} & K \\
 Finally, we want to see that for $[M] \in \pi_{2n} MU[6, \infty)$, \[\Phi(M) := (\pi_{2n} \sigma_{K_{\Tate}})(M) \left( -\frac{du}{u} \right)^{-n} \in \pi_0 K_{\Tate} = Z\ps{q}\] is a modular form.  We've at least seen that $\Phi(M)$ is a holomorphic function on $D$, with integral $q$--expansion coefficients.  It suffices to show that if $\pi: \h \to D$ is the map $\pi(\tau) = e^{2 \pi i \tau}$, then $\pi^* \Phi(M)$ transforms correctly under the action of $SL_2(\Z)$.  This is supposed to follow from stuff in the introduction (pp.\ 600-1, also Example 2.3).
 
 
-
+\todo[inline]{Now that you have an extra few days, you could actually go through the calculation of $H\F_{p*} \OS{ku}{2k}$ and $C^k(\G_a; \Gm)$.}
 
 
 
@@ -457,6 +460,18 @@ Formal schemes for certain real $K$--theory spaces
 The Atiyah--Bott--Shapiro orientation and the fibration $BSU \to BSpin$ \citeme{Theorem 2.3.5.iv in KLW}
 
 The $\String$ orientation and $\Sigma$--structures
+
+
+
+
+
+
+
+\section{Ando--French--Ganter}
+
+Iterated $\Theta$ structures
+
+The ``two--variable Jacobi genus''
 
 
 
