--- a/unknowns.tex
+++ b/unknowns.tex
@@ -37,5 +37,11 @@ The Stolz--Teichner program
 
 -----
 
-Difficulty in computing $\S_d \actson E_d^*$
+Difficulty in computing $\S_d \actson E_d^*$. (Gross--Hopkins and the period map.)
+
+Barry's $p$--adic measures
+
+Fixed point spectra and e.g. $L_{K(2)} \tmf$.
+
+Blueshift, A--M--S, and the relationship to A--F--G?
 
