--- a/hinfty.tex
+++ b/hinfty.tex
@@ -2,13 +2,15 @@
 
 \chapter{Power operations}
 
+\section{HKR characters}
+
+Following... the original? Following Nat?
+
 \section{Strickland's theorem}
 
-\section{$p$--divisible groups}
+Following... the original? Following Nat?
 
-\section{The Drinfel'd ring}
-
-\section{HKR characters}
+\section{$p$--divisible groups and the Drinfel'd ring}
 
 \section{Ando coordinates}
 
@@ -17,6 +19,9 @@
 The proof of Quillen's theorem and its interpretation in terms of isogenies of formal groups
 
 The Ando--Hopkins--Strickland result that the $\sigma$--orientation is an $H_\infty$--map
+
+
+
 
 \subsection*{Other stuff that goes in this chapter}
 
