--- a/finite.tex
+++ b/finite.tex
@@ -170,7 +170,7 @@ I think you can make sense of ``Cartesian'' directly on $\sheaf D_E(X)$, and tha
 
 
 
-\section{The structure of $\moduli{fgl}$}
+\section{The structure of $\moduli{fgl}$}\label{StructureOfMfgl}
 
 Our first goal for today is to outline a program for the rest of this Case Study.  Yesterday, we developed a rich target for $E$--homology: sheaves over an algebro-geometric object $\context{E}$.  Furthermore, we have promised a strengthening of Quillen's theorem, \Cref{QuillenSurjective}, which would result in an identification $\context{MU} \simeq \moduli{fg}$, where $\moduli{fg}$ is the ``moduli of formal groups''.  Our initial goal for today is to outline a program by which we can leverage this to study $MU$.  Abstractly, one can hope to study any sheaf, including $\context{MU}(X)$, by analyzing its stalks.  The main utility of Quillen's theorem is that it gives us access to a concrete model of $\context{MU}$, so that we can determine where to even look for those stalks.
 
@@ -544,7 +544,6 @@ Lubin--Tate deformation theory
 \citeme{Neil's FG notes in the first half of section 18 talk about additive extensions and their relation to infinitesimal deformations.  In the second half, he (more or less) talks about the de Rham crystal and shows that $\Ext_{\mathrm{rigid}}(G, \G_a) \cong \operatorname{Prim}(H^1_{dR}(G/X))$ in 18.37.}
 
 
-The calculation part of Lubin and Tate's theorem is done in 7.4.5. in the Formal Groups notes. It uses the tangent spectral sequence.
 
 
 
@@ -562,14 +561,18 @@ The nice picture I drew for Catherine
 
 \section{Nilpotence and periodicity}
 
-Every skew field spectrum is a wedge of $K(n)$s
+Our first goal for today is to capitalize on our analysis of $\moduli{fg}$ to construct some of the homology theories alluded to in \Cref{StructureOfMfgl}.
 
-Definition of $BP$ homology
+Landweber's flatness criterion
 
 % \item A $BP_*$--module $M$ gives a flat sheaf on $\moduli{fg}$ exactly when $(p, v_1, v_2, \ldots, v_{d-1}, \ldots)$ is a regular sequence $M$ too.
 % \item In particular, $BP_*$ is itself such a module, and so gives rise to a homology theory $BP$ with $\context{BP} \simeq \moduli{fg} \times \Spec \Z_{(p)}$.
 
-Definitions of Morava $K$-- and $E$--theory
+Construction of $BP$
+
+Construction of $E_\Gamma$ and $K_\Gamma$
+
+Point out that it's most important to understand $K(d)$ for each $d$, not $K_\Gamma$ for every $\Gamma$.
 
 \begin{remark}
 Morava $K$--theory at the even prime is not commutative.\todo{cf.\ Section 5.2 of KLW.}
@@ -577,7 +580,7 @@ Morava $K$--theory at the even prime is not commutative.\todo{cf.\ Section 5.2 o
 
 ----
 
-Having constructed these ``stalk'' homology theories, I want to show that you can actually perform analyses of the kind I was describing at the beginning of today.  Our example case is a famous theorem: the solution of Ravenel's nilpotence conjectures by Devinatz, Hopkins, and Smith.  Their theorem concerns spectra which ``detect nilpotence'' in the following sense:
+Having constructed these ``stalk'' homology theories, I want to show that you can actually perform stalkwise analyses of the sheaves coming from bordism theory.  Our example case is a famous theorem: the solution of Ravenel's nilpotence conjectures by Devinatz, Hopkins, and Smith.  Their theorem concerns spectra which ``detect nilpotence'' in the following sense:
 
 \begin{definition}
 A ring spectrum $E$ \textit{detects nilpotence} if, for any ring spectrum $R$, the kernel of the Hurewicz homomorphism $E_*: \pi_* R \to E_* R$ consists of nilpotent elements.
@@ -585,53 +588,54 @@ A ring spectrum $E$ \textit{detects nilpotence} if, for any ring spectrum $R$, t
 
 First, a word about why one would care about such a condition.  The following theorem is classical:
 \begin{theorem}[Nishida]
-Every homotopy class $\alpha \in \pi_{\ge 1} \S$ is nilpotent.
+Every homotopy class $\alpha \in \pi_{\ge 1} \S$ is nilpotent. \qed
 \end{theorem}
 
 \noindent However, people studying $K$--theory in the '$70$s discovered the following phenomenon:
 
 \begin{theorem}[Adams]
-Let $M_{2n}(p)$ denote the mod--$p$ Moore spectrum with bottom cell in degree $2n$.  Then there is an index $n$ and a map $v: M_{2n}(p) \to M_0(p)$ such that $KU_* v$ acts by multiplication by the $n$\textsuperscript{th}\, power of the Bott class.\footnote{The minimal such $n$ is given by the formula $n = \begin{cases} p-1 & \text{when $p \ge 3$}, \\ 4 & \text{when $p = 2$}. \end{cases}$}
+Let $M_{2n}(p)$ denote the mod--$p$ Moore spectrum with bottom cell in degree $2n$.  Then there is an index $n$ and a map $v: M_{2n}(p) \to M_0(p)$ such that $KU_* v$ acts by multiplication by the $n$\textsuperscript{th}\, power of the Bott class.  The minimal such $n$ is given by the formula \[n = \begin{cases} p-1 & \text{when $p \ge 3$}, \\ 4 & \text{when $p = 2$}. \qed \end{cases}\]
 \end{theorem}
 
-\noindent In particular, this means that $v$ cannot be nilpotent, since a null-homotopic map induces the zero map in any homology theory.  Just as we took the non-nilpotent endomorphism $p$ in $\pi_0 \End \S$ and coned it off, we can take the endomorphism $v$ in $\pi_{2p-2} \End M_0(p)$ and cone it off to form a new spectrum called $V(1)$.\footnote{$V(1)$ actually means a finite spectrum with $BP_* V(1) \cong BP_* / (p, v_1)$. At $p = 2$ this spectrum doesn't exist and this is a misnomer.}\todo{Lee Nave shows that $V((p+1)/1)$ doesn't exist. That's nice.}  Ravenel's burning question was whether the pattern continues: does $V(1)$ have a non-nilpotent self-map, and can we cone it off to form a new such spectrum with a new such map?  Can we then do that again, indefinitely?  In order to study this question, we are motivated to find spectra $E$ as above --- and in fact, we found one yesterday.
+\noindent In particular, this means that $v$ cannot be nilpotent, since a null-homotopic map induces the zero map in any homology theory.  Just as we took the non-nilpotent endomorphism $p$ in $\pi_0 \End \S$ and coned it off, we can take the endomorphism $v$ in $\pi_{2p-2} \End M_0(p)$ and cone it off to form a new spectrum called $V(1)$.
 
-\begin{theorem}[Devinatz--Hopkins--Smith, hard]
-Complex cobordism $MU$ detects nilpotence.
+\begin{remark}
+The spectrum $V(1)$ is actually defined to be a finite spectrum with $BP_* V(1) \cong BP_* / (p, v_1)$. At $p = 2$ this spectrum doesn't exist and this is a misnomer.  More generally, at odd primes $p$ Nave shows that $V((p+1)/2)$ doesn't exist.\citeme{Cite Lee Nave}
+\end{remark}
+
+One can ask, then, whether the pattern continues: does $V(1)$ have a non-nilpotent self-map, and can we cone it off to form a new such spectrum with a new such map?  Can we then do that again, indefinitely?  In order to study this question, we are motivated to find spectra $E$ as above, since an $E$ that detects nilpotence cannot send such a nontrivial self-map to zero.  In fact, we found one such $E$ already:
+
+\begin{theorem}[Devinatz--Hopkins--Smith]\label{DevinatzHopkinsSmith}\citeme{Devinatz, Hopkins, Smith}
+Complex cobordism $MU$ detects nilpotence. \qed
 \end{theorem}
 
 They also show that the $MU$ is the universal object which detects nilpotence, in the sense that any other ring spectrum can have this property checked stalkwise on $\context{MU}$:
 
-\begin{theorem}[Hopkins--Smith, easy]
+\begin{corollary}[Hopkins--Smith]\citeme{Hopkins--Smith}
 A ring spectrum $E$ detects nilpotence if and only if $K(d)_* E \ne 0$ for all $0 \le d \le \infty$ and for all primes $p$.
-\end{theorem}
+\end{corollary}
 \begin{proof}
 If $K(d)_* E = 0$ for some $d$, then the non-nilpotent map $\S \to K(d)$ lies in the kernel of the Hurewicz homomorphism for $E$, so $E$ fails to detect nilpotence.
 
-Hence, for any $d$ we must have $K(d)_* E \ne 0$.  Because $K(d)_*$ is a field, it follows by picking a basis of $K(d)_* E$ that $K(d) \sm E$ is a nonempty wedge of suspensions of $K(d)$.  So, for $\alpha \in \pi_* R$, if $E_* \alpha = 0$ then $(K(d) \sm E)_* \alpha = 0$ and hence $K(d)_* \alpha = 0$.  So, we need to show that if $K(d)_* \alpha = 0$ for all $n$ and all $p$ then $\alpha$ is nilpotent.  Taking Devinatz--Hopkins--Smith as given, it would suffice to show merely that $MU_* \alpha$ is nilpotent.  This is equivalent to showing that the ring spectrum $MU \sm R[\alpha^{-1}]$ is contractible or that the unit map is null: \[\S \to MU \sm R[\alpha^{-1}].\]
+Hence, for any $d$ we must have $K(d)_* E \ne 0$.  Because $K(d)_*$ is a field, it follows by picking a basis of $K(d)_* E$ that $K(d) \sm E$ is a nonempty wedge of suspensions of $K(d)$.  So, for $\alpha \in \pi_* R$, if $E_* \alpha = 0$ then $(K(d) \sm E)_* \alpha = 0$ and hence $K(d)_* \alpha = 0$.  So, we need to show that if $K(d)_* \alpha = 0$ for all $n$ and all $p$ then $\alpha$ is nilpotent.  Taking \Cref{DevinatzHopkinsSmith} as given, it would suffice to show merely that $MU_* \alpha$ is nilpotent.  This is equivalent to showing that the ring spectrum $MU \sm R[\alpha^{-1}]$ is contractible or that the unit map is null: \[\S \to MU \sm R[\alpha^{-1}].\]
 
 Pick a prime $p$ and recall the regular sequence of Landweber's theorem.  We define a spectrum $P(d+1)$ to be the regular quotient of $BP$ by $(p, v_1, \ldots, v_d)$.  A nontrivial result of Johnson and Wilson shows that if $MU_* X = 0$ for any $X$, then for any $d$ we have $K([0, d])_* X = 0$ and $P(d+1)_* X = 0$.\footnote{It is immediate that $MU_* X = 0$ forces $P(d+1)_* X = 0$ and $v_{d'}^{-1} P(d')_*(X) = 0$ for all $d' < d$.  What's nontrivial is showing that $v_{d'}^{-1} P(d')_*(X) = 0$ if and only if $K(d')_*(X) = 0$.}  Taking $X = R[\alpha^{-1}]$, have assumed all of these are zero except for $P(d+1)$.  But $\colim_d P(d+1) \simeq H\F_p \simeq K(\infty)$, and $\S \to K(\infty) \sm R[\alpha^{-1}]$ is assumed to be null as well.  By compactness of $\S$, that null-homotopy factors through some finite stage $P(d+1) \sm R[\alpha]$ with $d \gg 0$.
 \end{proof}
 
 As another example of the primacy of these methods, we can show the following interesting result.  Say that $R$ is a field spectrum when every $R$--module (in the homotopy category) splits as a wedge of suspensions of $R$.  It is easy to check (as mentioned in the proof above) that $K(d)$ is an example of such a spectrum.
 
-\begin{theorem}
-Every field spectrum $R$ splits as a wedge of Morava $K$--theories.
-\end{theorem}
+\begin{corollary}
+Every field spectrum $R$ splits as a wedge of Morava's $K(d)$ theories.
+\end{corollary}
 \begin{proof}
 Set $E = \bigvee_{\text{primes $p$}} \bigvee_{d \in [0, \infty]} K(d)$, so that $E$ detects nilpotence.  The class $1$ in the field spectrum $R$ is non-nilpotent, so it survives when paired with some $K$--theory $K(d)$, and hence $R \sm K(d)$ is not contractible.  Because both $R$ and $K(d)$ are field spectra, the smash product of the two simultaneously decomposes into a wedge of $K(d)$s and a wedge of $R$s.  So, $R$ is a retract of a wedge of $K(d)$s, and picking a basis for its image on homotopy shows that it is a sub-wedge of $K(d)$s.
 \end{proof}
 
-\noindent This is interesting in its own right, because field spectra are exactly those spectra which have K\"unneth isomorphisms.  So, even if you weren't neck-deep in algebraic geometry, you might still have struck across these homology theories just if you like to compute things, since K\"unneth formulas make things computable.
+\begin{remark}
+This is interesting in its own right, because field spectra are exactly those spectra which have K\"unneth isomorphisms.  So, even if you weren't neck-deep in algebraic geometry, you might still have struck across these homology theories just if you like to compute things, since K\"unneth formulas make things computable.
+\end{remark}
 
--------
-
-Classification of the thick subcategories
-
-Balmer's Spc functor
-
-
-Our first goal for today is to apply these local methods once more to get a positive answer to Ravenel's question about finite spectra and periodic self-maps.  The solution to this problem passes through some now-standard machinery for triangulated $\otimes$--categories.
+We're now well-situated to address Ravenel's question about finite spectra and periodic self-maps.  The solution to this problem passes through some now-standard machinery for triangulated $\otimes$--categories.
 
 \begin{definition}
 A subcategory of the category of a triangulated category (e.g., $p$--local finite spectra) is \textit{thick} if it is closed under weak equivalences, it is closed under retracts, and it has a $2$-out-of-$3$ property for cofiber sequences.
@@ -644,17 +648,18 @@ A subcategory of the category of a triangulated category (e.g., $p$--local finit
 \end{itemize}
 Hopkins and Smith show the following classification theorem:
 
-\begin{theorem}[Hopkins--Smith, easy]
+\begin{theorem}[Hopkins--Smith]\citeme{Hopkins--Smith}
 Any thick subcategory $\CatOf C$ of $p$--local finite spectra must be $\CatOf C_d$ for some $d$.
 \end{theorem}
 \begin{proof}
-It is sufficient to show that any object $X \in \CatOf C$ with $X \in \CatOf C_d$ induces an inclusion $\CatOf C_d \subseteq \CatOf C$.  Let $Y \in \CatOf C_d$ be any other spectrum of type at least $d$.  Consider the endomorphism ring spectrum $R = F(X, X)$ and the fiber $f: F \to \S$ of its unit map.\todo{Make it clear what $f$ is. Draw the fiber sequence or something.}  The action of $f$ under $K(n)$--homology is an isomorphism exactly when $X$ is $K(n)$--acyclic, and because the $K(n)$--acyclicity of $X$ implies the $K(n)$--acyclicity of $Y$, it follows that $1 \sm f: Y \sm F \to Y \sm \S$ is always null on $K(n)$--homology for all $n$.  By a small variant of the local nilpotence detection theorem, it follows that \[Y \sm F^{\sm j} \xrightarrow{1 \sm f^{\sm j}} Y \sm \S^{\sm j}\] is null for $j \gg 0$, and hence that \[\operatorname{cofib}\left( Y \sm F^{\sm j} \xrightarrow{1 \sm f^{\sm j}} Y \sm \S^{\sm j} \right) \simeq Y \sm \operatorname{cofib} f^{\sm j} \simeq Y \vee (Y \sm \Susp F^{\sm j}),\] so that $Y$ is a retract.  However, consider the following smash version of the octahedral axiom: the factorization \[F \sm F^{\sm (j-1)} \xrightarrow{f \sm 1} \S \sm F^{\sm (j-1)} \xrightarrow{1 \sm f^{\sm (j-1)}} \S \sm \S^{\sm (j-1)}\] begets a cofiber sequence \[F \sm \operatorname{cofib} f^{\sm (j-1)} \to \operatorname{cofib} f^{\sm j} \to \operatorname{cofib} f \sm \S^{\sm (j-1)}.\]
+\todo{I'm not totally convinced of this reduction.}It is sufficient to show that any object $X \in \CatOf C$ with $X \in \CatOf C_d$ induces an inclusion $\CatOf C_d \subseteq \CatOf C$.
+Let $Y \in \CatOf C_d$ be any other spectrum of type at least $d$.  Consider the endomorphism ring spectrum $R = F(X, X)$ and the fiber $f: F \to \S$ of its unit map.\todo{Make it clear what $f$ is. Draw the fiber sequence or something.}  The action of $f$ under $K(n)$--homology is an isomorphism exactly when $X$ is $K(n)$--acyclic, and because the $K(n)$--acyclicity of $X$ implies the $K(n)$--acyclicity of $Y$, it follows that $1 \sm f: Y \sm F \to Y \sm \S$ is always null on $K(n)$--homology for all $n$.  By a small variant of the local nilpotence detection theorem, it follows that \[Y \sm F^{\sm j} \xrightarrow{1 \sm f^{\sm j}} Y \sm \S^{\sm j}\] is null for $j \gg 0$, and hence that \[\operatorname{cofib}\left( Y \sm F^{\sm j} \xrightarrow{1 \sm f^{\sm j}} Y \sm \S^{\sm j} \right) \simeq Y \sm \operatorname{cofib} f^{\sm j} \simeq Y \vee (Y \sm \Susp F^{\sm j}),\] so that $Y$ is a retract.  However, consider the following smash version of the octahedral axiom: the factorization \[F \sm F^{\sm (j-1)} \xrightarrow{f \sm 1} \S \sm F^{\sm (j-1)} \xrightarrow{1 \sm f^{\sm (j-1)}} \S \sm \S^{\sm (j-1)}\] begets a cofiber sequence \[F \sm \operatorname{cofib} f^{\sm (j-1)} \to \operatorname{cofib} f^{\sm j} \to \operatorname{cofib} f \sm \S^{\sm (j-1)}.\]
 Using $\operatorname{cofib}(f) = X \sm DX \in \CatOf C$, one can inductively show that $\operatorname{cofib}(f^{\sm j})$, hence $Y \sm \operatorname{cofib}(f^{\sm j})$, and hence $Y$ all belong to $\CatOf C$ as well.
 \end{proof}
 
 They also show the \emph{considerably} harder theorem:
 
-\begin{theorem}[Hopkins--Smith, hard]
+\begin{theorem}[Hopkins--Smith]\citeme{Hopkins--Smith}
 A $p$--local finite spectrum is $K(d-1)$--acyclic exactly when it admits a $v_d$--self--map.
 \end{theorem}
 \begin{proof}[Executive summary of proof]
@@ -667,9 +672,6 @@ BP_* M_{|v_d| i_d}(p^{i_0}, v_1^{i_1}, \ldots, v_{d-1}^{i_{d-1}}) \arrow{r}{v} \
 \end{center}
 These maps are guaranteed by very careful study of Adams spectral sequences.
 \end{proof}
-
-
-\subsection*{Balmer spectra and chromatic localization}
 
 As part of a broad attempt to analyze a geometric object through its modules, Paul Balmer has demonstrated the following theorem:
 
@@ -689,7 +691,7 @@ The Balmer spectrum of $\CatOf{Spectra}_{(p)}^{\mathrm{fin}}$ consists of the th
 Using the characterization of $\CatOf C_d$ as the kernel of $K(d-1)_*$, we see that it is a prime $\otimes$--ideal: \[K(d-1)_*(X \sm Y) \cong K(d-1)_* X \otimes_{K(d-1)_*} K(d-1)_* Y\] is zero exactly when at least one of $X$ and $Y$ is $K(d-1)$--acyclic.
 \end{proof}
 
-In fact, our favorite functor\footnote{However, this functor is \emph{not} a map of triangulated categories, so this has to be interpreted lightly.} $MU_*: \CatOf{Spectra} \to \CatOf{QCoh}(\context{MU})$ induces a homeomorphism of the Balmer spectrum of $\CatOf{Spectra}^{\mathrm{fin}}$ to that of $\moduli{fg}$.
+In fact, our favorite functor\footnote{However, this functor is \emph{not} a map of triangulated categories, so this has to be interpreted lightly.}\todo{Make this a remark.} $MU_*: \CatOf{Spectra} \to \CatOf{QCoh}(\context{MU})$ induces a homeomorphism of the Balmer spectrum of $\CatOf{Spectra}^{\mathrm{fin}}$ to that of $\moduli{fg}$.
 
 
 
