add guidelines for bibtex entries

--- a/main.bib
+++ b/main.bib
@@ -1,4 +1,13 @@
 
+//
+// this is the bibtex file used to compile the bibliography for the sigma orientation course notes.
+// whenever possible, citations should be pulled from mathscinet, pasted in exactly, and then their identifiers should be changed to something human-readable, subject to the following guidelines:
+//
+// 1) if there are one or two authors, list their last names in alphabetical order (e.g., AndoStrickland).
+// 2) if there are three or more authors, list their last initials in alphabetical order (e.g., BCM).
+// 3) if these rules result in name collisions (e.g., the two Ando Hopkins Strickland papers), a short string related to the title of the paper should be appended (e.g., AHSHinfty and AHSTheoremOfTheCube).
+//
+
 @article {Ando,
     AUTHOR = {Ando, Matthew},
      TITLE = {Isogenies of formal group laws and power operations in the
